[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aho-corasick = "1.1"

# 🔑 REQUIRED FOR MUSL .so
[target.'cfg(target_env = "musl")']
rustflags = ["-C", "target-feature=-crt-static"]
